<resources>
    <string name="app_name">ShoppingClient</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="sign_out">Đăng xuất</string>
    <string name="description">Mô tả</string>
    <string name="food_name">Food Name</string>
    <string name="view_orders">Đơn mua</string>
    <string name="view_orders_seller">Đơn bán</string>
    <string name="don_hang">Đơn hàng</string>
    <string name="vi_tien">Ví tiền</string>
    <string name="cart">Giỏ hàng</string>
    <string name="add_new_pd">Thêm sản phẩm mới</string>
    <string name="my_pd">Sản phẩm của bạn</string>
    <string name="update_pd">Cập nhập sản phẩm</string>
    <string name="category">Danh mục sản phẩm</string>
    <string name="nap_tien">Nạp tiền</string>
</resources>