<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/home"
            android:title="@string/menu_home" />

        <item
            android:id="@+id/nav_sign_out"
            android:icon="@drawable/ic_baseline_exit_to_app_24"
            android:title="@string/sign_out" />



    </group>

    <item android:title="sản phẩm">
        <menu>
            <item
                android:id="@+id/nav_view_add_new_product"
                android:icon="@drawable/ic_baseline_add_circle_24"
                android:title="thêm sản phẩm mới " />
            <item
                android:id="@+id/nav_view_my_product"
                android:icon="@drawable/ic_baseline_smartphone_24"
                android:title="sản phẩm của bạn " />
            <item
                android:id="@+id/nav_category"
                android:icon="@drawable/ic_baseline_smartphone_24"
                android:title="danh mục sản phẩm" />
        </menu>

    </item>

    <item android:title="@string/don_hang">
        <menu>
            <item
                android:id="@+id/nav_view_order"
                android:icon="@drawable/ic_baseline_restore_24"
                android:title="@string/view_orders" />
            <item
                android:id="@+id/nav_view_order_seller"
                android:icon="@drawable/ic_baseline_restore_24"
                android:title="@string/view_orders_seller" />

        </menu>


    </item>

</menu>