<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"

    >

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        >
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            app:title="@string/menu_home"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            android:background="#7A86EA"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"/>


    </com.google.android.material.appbar.AppBarLayout>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_below="@id/appBarLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fitsSystemWindows="true"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar">

            <com.google.android.material.appbar.CollapsingToolbarLayout
                android:id="@+id/collapsing"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fitsSystemWindows="true"
                app:contentScrim="#0e0d0e"
                app:expandedTitleTextAppearance="@color/fui_transparent"
                app:layout_scrollFlags="scroll|exitUntilCollapsed">

                <ss.com.bannerslider.Slider
                    android:background="#000"
                    android:id="@+id/banner_slider"
                    android:layout_width="match_parent"
                    android:layout_height="390dp"
                    android:layout_gravity="center_horizontal" />


            </com.google.android.material.appbar.CollapsingToolbarLayout>

        </com.google.android.material.appbar.AppBarLayout>

        <com.andremion.counterfab.CounterFab
            android:id="@+id/btn_cart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:elevation="6dp"
            android:src="@drawable/ic_baseline_favorite_24"
            app:layout_anchor="@id/appBarLayout"
            app:layout_anchorGravity="bottom|right|end"
            app:pressedTranslationZ="12dp"
            app:useCompatPadding="true" />


        <androidx.core.widget.NestedScrollView
            android:id="@+id/nestedScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:clipToPadding="false"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:id="@+id/txtFoodName"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="8dp"
                            android:padding="12dp"
                            android:text="@string/food_name"
                            android:textColor="@color/colorPrimary"
                            android:textSize="20dp"
                            android:textStyle="bold" />

                        <LinearLayout
                            android:id="@+id/layout_price"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:src="@drawable/ic_baseline_attach_money_24" />

                            <TextView
                                android:id="@+id/txtFoodPrice"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="9"
                                android:text="1,000"
                                android:textColor="@color/colorPrimary"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                        </LinearLayout>



                        />

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardElevation="5dp"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">
                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:orientation="horizontal">
                            <ImageButton
                                android:backgroundTint="#00000000"
                                android:id="@+id/btn_call"
                                android:src="@drawable/ic_baseline_local_phone_24"
                                android:layout_width="39dp"
                                android:layout_height="39dp"/>
                            <TextView
                                android:id="@+id/txt_phone"
                                android:textColor="@color/black"
                                android:textSize="20sp"
                                android:text="SDT:0922123323"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>
                        <Button
                            android:layout_width="wrap_content"
                            android:layout_height="30dp"
                            android:id="@+id/btn_report"
                            android:text="báo cáo"
                            android:textSize="10dp"
                            />
                        <View
                            android:background="#DC8F8F"
                            android:layout_width="match_parent"
                            android:layout_height="1dp"/>
                        <TextView
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:text="@string/description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                        <TextView
                            android:id="@+id/txtFoodDescription"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="12dp"
                            android:lineSpacingMultiplier="1.5"
                            android:padding="12dp"
                            android:text="@string/description"
                            android:textColor="@color/black"
                            android:textSize="14sp" />

                    </LinearLayout>
                </androidx.cardview.widget.CardView>






            </LinearLayout>
        </androidx.core.widget.NestedScrollView>

    </androidx.coordinatorlayout.widget.CoordinatorLayout>


</RelativeLayout>




